# hulk-apps-chat

./: .env.example  .flaskenv  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: ChatScreen.vue  ChatWindow.vue  HomePage.vue  LoginScreen.vue  MembersList.vue  RegisterScreen.vue  RoomsList.vue
frontend/src/router/: index.js
hulk_apps_chat/: __init__.py  auth.py  chat.py  models.py  utils.py
hulk_apps_chat/chat/: __init__.py  chat.py  rooms.py
migrations/versions/: 2de7f21c1d9f_room_members.py  7a4aa3aeb67a_message_status.py  ce037065567e_password_hash_to_256_chars.py  da17ef305228_chat_room_model.py
