[tool.poetry]
name = "hulk-apps-chat"
version = "0.1.0"
description = ""
authors = ["Ismar Sehic <ismar.sehic@emonitor.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.2"
flask-socketio = "^5.3.6"
redis = "^5.0.3"
pyjwt = "^2.8.0"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.6.0"
flask-migrate = "^4.0.7"
python-dotenv = "^1.0.1"
flask-cors = "^4.0.0"
flask-session = "^0.7.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
